--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
 	"scripts": {
 		"install:publisher": "cd ./publisher && npm install",
 		"install:subscriber": " cd ./subscriber && npm install",
-		"install": "run-s install:publisher install:subscriber",
+		"install:all": "run-s install:publisher install:subscriber",
 		"start:publisher": "cd ./publisher && npm start",
 		"start:subscriber": " cd ./subscriber && npm start",
-		"start": "run-p start:publisher start:subscriber"
+		"start": "run-p start:publisher start:subscriber",
+		"test": "mocha --exit test.js && rimraf storage"
 	},
 	"repository": {
 		"type": "git",
@@ -23,6 +24,12 @@
 	},
 	"homepage": "https://github.com/tolustar/publisher-subsciber#readme",
 	"devDependencies": {
-		"npm-run-all": "^4.1.5"
-	}
+		"chai": "^4.3.4",
+		"mocha": "^8.3.2",
+		"nock": "^13.0.11",
+		"npm-run-all": "^4.1.5",
+		"rimraf": "^3.0.2",
+		"supertest": "^6.1.3"
+	},
+	"dependencies": {}
 }
